contrast fix

--- a/style/style.css
+++ b/style/style.css
@@ -269,7 +269,7 @@ h2{
 footer{
     text-align:center;
     padding:60px;
-    color:rgb(19, 19, 19);
+    color:rgb(17, 15, 15);
 }
     
 /* ACCESSIBILITY */
